--- a/TaskLogSystem/Views/Shared/_EmployeesTable.cshtml
+++ b/TaskLogSystem/Views/Shared/_EmployeesTable.cshtml
@@ -1,6 +1,5 @@
-﻿@model List<TaskLogSystem.Models.Employee>
+﻿@using TaskLogSystem.Models
 
-@using TaskLogSystem.Models
 @{
     Employee user = null;
     if (Session["CurrentUser"] != null)
@@ -9,81 +8,36 @@
     }
 }
 
-<table class="table table-bordered table-responsive" id="EmployeeTable">
-    <thead>
-        <tr>
-            <th>
-                Employee Code
-            </th>
-            <th>
-                Employee Name
-            <th>
-                Gender
-            </th>
-            <th>
-                Email
-            </th>
-            <th>
-                Department
-            </th>
-
-            @if (user.DepartmentID == 1)
-            {
-                <th>
-                    Reporting Person
-                </th>
-
-                <th>
-                    Action
-                </th>
-            }
-        </tr>
-    </thead>
-
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div class="container">
+    <table class="table table-bordered table-responsive" id="EmployeeTable">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EmployeeCode)
-                </td>
-                <td>
-                    @((item != null) ? item.FirstName + " " + item.LastName : null)
-                </td>
-                <td>
-                    @((item.Gender == "M") ? "Male" : "Female")
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Department.DepartmentName)
-                </td>
+                <th>
+                    Employee Code
+                </th>
+                <th>
+                    Employee Name
+                <th>
+                    Gender
+                </th>
+                <th>
+                    Email
+                </th>
+                <th>
+                    Department
+                </th>
 
                 @if (user.DepartmentID == 1)
                 {
-                    <td>
-                        @((item != null && item.Employee2 != null) ? item.Employee2.FirstName + " " + item.Employee2.LastName : null)
-                    </td>
+                    <th>
+                        Reporting Person
+                    </th>
 
-                    <td>
-
-                        <button type="button"
-                                class="btn btn-primary editEmployeeBtn"
-                                data-id="@item.EmployeeID"
-                                data-bs-toggle="modal"
-                                data-bs-target="#modalId">
-                            Edit
-                        </button>
-
-                        <button type="button"
-                                class="btn btn-danger deleteEmployeeBtn"
-                                data-id="@item.EmployeeID">
-                            Delete
-                        </button>
-                    </td>
+                    <th>
+                        Action
+                    </th>
                 }
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+    </table>
+</div>
