--- a/TaskLogSystem/Views/Shared/_Layout.cshtml
+++ b/TaskLogSystem/Views/Shared/_Layout.cshtml
@@ -18,30 +18,31 @@
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/customstyle")
 
-    <!-- Data Table -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.0/css/dataTables.jqueryui.min.css" />
+    <!-- DataTables CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
 
     @*SweetAlert*@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
 
+<body>
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
 
     @Scripts.Render("~/bundles/themejq")
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+
     <script>
         $.widget.bridge('uibutton', $.ui.button);
     </script>
 
     @Scripts.Render("~/bundles/minjs")
     @Scripts.Render("~/bundles/bootstrap")
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
-    <script src="https://cdn.datatables.net/2.0.0/js/dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/2.0.0/js/dataTables.jqueryui.min.js"></script>
+
+    <!-- DataTables JS -->
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
